--- a/openstack/glance_store/glance_store.spec.j2
+++ b/openstack/glance_store/glance_store.spec.j2
@@ -1,14 +1,12 @@
 %global sname glance_store
 Name:           {{ py2name('glance_store') }}
-Version:        0.20.0
+Version:        0.22.0
 Release:        0
 Summary:        OpenStack Image Service Store Library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/g/%{sname}/%{sname}-%{version}.tar.gz
-# from https://review.openstack.org/#/c/465093/
-Patch1:         0001-Fixed-tests-due-to-updated-oslo.config.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('debtcollector') }}
@@ -65,7 +63,7 @@ Glance store library.
 Summary:        Documentation for OpenStack Image Service Store Library
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
@@ -74,6 +72,7 @@ Documentation for the Glance store library.
 %prep
 %autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
