Update django_openstack_auth to 3.5.0
Change-Id: I2a632400ea1721e9d321fd271a7299d3c23d3b0f
Depends-on: I0e1aaadbd0a9655d93e6e6af3c9a6cc21346f607

--- a/openstack/django_openstack_auth/django_openstack_auth.spec.j2
+++ b/openstack/django_openstack_auth/django_openstack_auth.spec.j2
@@ -1,14 +1,12 @@
 %global pypi_name django_openstack_auth
 Name:           {{ py2name('django_openstack_auth') }}
-Version:        3.2.0
+Version:        3.5.0
 Release:        0
 Summary:        Django authentication backend for OpenStack Keystone
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://docs.openstack.org/developer/django_openstack_auth/
 Source0:        https://pypi.io/packages/source/d/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
-# https://review.openstack.org/#/c/470900/
-Patch1:         0001-Fix-doc-build.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Django') }}
 BuildRequires:  python-devel
@@ -42,7 +40,7 @@ user against OpenStack's Keystone Identity API.
 Summary:        Documentation for %{name}
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Django OpenStack Auth is a pluggable Django authentication backend
@@ -54,6 +52,7 @@ This package contains documentation in HTML format.
 %prep
 %autosetup -p1 -n %{pypi_name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
