--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystoneauth1
 Name:           {{ py2name('keystoneauth1') }}
-Version:        2.21.0
+Version:        3.0.1
 Release:        0
 Summary:        OpenStack authenticating tools
 License:        {{ license('Apache-2.0') }}
@@ -49,7 +49,7 @@ Tools for authenticating to an OpenStack-based cloud. These tools include:
 %package doc
 Summary:        Documentation for OpenStack authenticating tools
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for OpenStack authenticating tools.
@@ -57,6 +57,7 @@ Documentation for OpenStack authenticating tools.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 # cleanup intersphinx (we have no network during build)
 echo "intersphinx_mapping = {}" >> doc/source/conf.py
