monasca-agent: Add missing oslotest BuildRequires
Change-Id: I74dff51eb1ea64db59a51d2a6e179827ae5e8e9f

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -53,6 +53,7 @@ BuildRequires:  {{ py2pkg('python-monascaclient') }}
 BuildRequires:  {{ py2pkg('netaddr') }}
 BuildRequires:  {{ py2pkg('nose') }}
 BuildRequires:  {{ py2pkg('ntplib') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('oslo.concurrency') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
