--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -1,14 +1,12 @@
 %global sname python-openstackclient
 Name:           {{ py2name('python-openstackclient') }}
-Version:        3.11.0
+Version:        3.12.0
 Release:        0
 Summary:        OpenStack Command-line Client
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
-# https://review.openstack.org/#/c/482880/
-Patch0:         0001-Fix-unit-test-failures-related-to-new-os-client-conf.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('cliff') }}
@@ -64,7 +62,7 @@ BuildRequires:  {{ py2pkg('Sphinx') }}
 #BuildRequires:  {{ py2pkg('python-mistralclient') }}
 #BuildRequires:  {{ py2pkg('python-muranoclient') }}
 #BuildRequires:  {{ py2pkg('python-neutronclient') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 #BuildRequires:  {{ py2pkg('python-ironic-inspector-client') }}
 #BuildRequires:  {{ py2pkg('python-saharaclient') }}
 #BuildRequires:  {{ py2pkg('python-zaqarclient') }}
@@ -78,6 +76,7 @@ This package contains auto-generated documentation.
 %prep
 %autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
