--- a/openstack/python-senlinclient/python-senlinclient.spec.j2
+++ b/openstack/python-senlinclient/python-senlinclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-senlinclient
 Name:           {{ py2name('python-senlinclient') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Senlin
 License:        {{ license('Apache-2.0')}}
@@ -57,7 +57,7 @@ senlinclient module) and a command-line interface (senlin).
 Summary:        Documentation for OpenStack Senlin API Client
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
@@ -68,6 +68,7 @@ auto-generated documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
