--- a/openstack/python-freezerclient/python-freezerclient.spec.j2
+++ b/openstack/python-freezerclient/python-freezerclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-freezerclient') }}
-Version:        1.4.1
+Version:        1.5.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Freezer
 License:        {{ license('Apache-2.0') }}
@@ -38,7 +38,7 @@ Client library for Freezer built on the Freezer API. It provides a Python API
 Summary:        Documentation for OpenStack Freezer API client libary
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Client library for Freezer built on the Freezer API. It provides a Python API
@@ -48,6 +48,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
