Update python-cinderclient to 3.1.0
Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>
Change-Id: I39392f584b02f039a7f8c1cdc6394ab2218e4498
Depends-on: I6966fcb1556e3c012ae86e7f6dae28fb6336c6d0

--- a/openstack/python-cinderclient/python-cinderclient.spec.j2
+++ b/openstack/python-cinderclient/python-cinderclient.spec.j2
@@ -1,12 +1,14 @@
 %global sname python-cinderclient
 Name:           {{ py2name('python-cinderclient') }}
-Version:        3.0.0
+Version:        3.1.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Cinder
 License:        {{ license('Apache-2.0')}}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+# https://review.openstack.org/#/c/488924/
+Patch1:         0001-Fix-man-page-build.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
 BuildRequires:  {{ py2pkg('ddt') }}
