--- a/openstack/python-ironic-inspector-client/python-ironic-inspector-client.spec.j2
+++ b/openstack/python-ironic-inspector-client/python-ironic-inspector-client.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-ironic-inspector-client
 Name:           {{ py2name('python-ironic-inspector-client') }}
-Version:        1.12.0
+Version:        2.0.0
 Release:        0
 Summary:        Python client and CLI tool for Ironic Inspector
 License:        {{ license('Apache-2.0') }}
@@ -13,9 +13,9 @@ BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('python-openstackclient') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('osc-lib') }}
 BuildRequires:  {{ py2pkg('oslo.concurrency') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
