--- a/openstack/python-glanceclient/python-glanceclient.spec.j2
+++ b/openstack/python-glanceclient/python-glanceclient.spec.j2
@@ -1,7 +1,7 @@
 %global sname python-glanceclient
 Name:           {{ py2name('python-glanceclient') }}
 Epoch:          {{ epoch('python-glanceclient') }}
-Version:        2.7.0
+Version:        2.8.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Glance
 License:        {{ license('Apache-2.0') }}
@@ -17,6 +17,7 @@ BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('os-client-config') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('pyOpenSSL') }}
 BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
@@ -25,13 +26,15 @@ BuildRequires:  {{ py2pkg('testtools') }}
 BuildRequires:  {{ py2pkg('warlock') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PrettyTable') }}
-Requires:       {{ py2pkg('python-keystoneclient') }}
+Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('pbr') }}
+Requires:       {{ py2pkg('pyOpenSSL') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('warlock') }}
+Requires:       {{ py2pkg('wrapt') }}
 BuildArch:      noarch
 
 %description
@@ -43,7 +46,7 @@ glanceclient module), and a command-line script (glance). Each implements
 Summary:        Documentation for OpenStack Glance API Client
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description      doc
 This is a client for the OpenStack Glance API. There's a Python API (the
@@ -54,6 +57,7 @@ This package contains auto-generated documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
