Update python-zaqarclient to 1.7.0
Change-Id: I58e8e866d7913f5a737e6acbd21e9ea5ba924d69
Depends-on: I0fce81215cf90769f680cdb8cc7de2aaf2ad7fe8

--- a/openstack/python-zaqarclient/python-zaqarclient.spec.j2
+++ b/openstack/python-zaqarclient/python-zaqarclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname zaqarclient
 Name:           {{ py2name('python-zaqarclient') }}
-Version:        1.6.0
+Version:        1.7.0
 Release:        0
 Summary:        Client Library for OpenStack Zaqar Queueing API
 License:        {{ license('Apache-2.0') }}
@@ -47,7 +47,7 @@ Python client to Zaqar Queueing API.
 Summary:        Documentation for OpenStack Zaqar Queueing API
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the client library for interacting with Openstack
@@ -56,6 +56,7 @@ Zaqar Queueing API.
 %prep
 %autosetup -n %{name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
