--- a/openstack/python-muranoclient/python-muranoclient.spec.j2
+++ b/openstack/python-muranoclient/python-muranoclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-muranoclient') }}
-Version:        0.13.0
+Version:        0.14.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Murano
 License:        {{ license('Apache-2.0') }}
@@ -53,7 +53,7 @@ Client library for Murano built on the Murano API. It provides a Python API
 Summary:        Documentation for OpenStack Magnum API client libary
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
@@ -64,6 +64,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
