--- a/openstack/python-heatclient/python-heatclient.spec.j2
+++ b/openstack/python-heatclient/python-heatclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-heatclient
 Name:           {{ py2name('python-heatclient') }}
-Version:        1.10.0
+Version:        1.11.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Heat
 License:        {{ license('Apache-2.0') }}
@@ -47,7 +47,7 @@ the OpenStack Heat API.
 Summary:        Documentation for OpenStack Heat API Client
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description      doc
 This is a client for the OpenStack Heat API. There's a Python API (the
@@ -58,6 +58,7 @@ This package contains auto-generated documentation.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
