--- a/openstack/python-saharaclient/python-saharaclient.spec.j2
+++ b/openstack/python-saharaclient/python-saharaclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname saharaclient
 Name:           {{ py2name('python-saharaclient') }}
-Version:        1.2.0
+Version:        1.3.0
 Release:        0
 Summary:        Client library for OpenStack Sahara API
 License:        {{ license('Apache-2.0') }}
@@ -44,7 +44,7 @@ Python client library for interacting with OpenStack Sahara API.
 Summary:        Documentation for Client library for OpenStack Sahara API
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Python client library for interacting with OpenStack Sahara API.
@@ -54,6 +54,7 @@ Python client library for interacting with OpenStack Sahara API.
 %py_req_cleanup
 # FIXME: can be removed when https://review.openstack.org/#/c/363681/ is merged
 sed -i -e 's/^\s\{4\}git_cmd\(.*\)/    "\/usr\/bin\/true"\1/' doc/source/conf.py
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
@@ -67,6 +68,8 @@ sed -i -e 's/^\s\{4\}git_cmd\(.*\)/    "\/usr\/bin\/true"\1/' doc/source/conf.py
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %check
+# we don't want to depend on hacking/flake8/pep8
+rm -v saharaclient/tests/unit/test_hacking.py
 %{__python2} setup.py testr
 
 %files
