--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -1,7 +1,7 @@
 %global sname python-keystoneclient
 Name:           {{ py2name('python-keystoneclient') }}
 Epoch:          {{ epoch('python-keystoneclient') }}
-Version:        3.12.0
+Version:        3.13.0
 Release:        0
 Summary:        Client library for OpenStack Identity API
 License:        {{ license('Apache-2.0') }}
@@ -46,7 +46,7 @@ Client library for interacting with Openstack Identity API.
 Summary:        Documentation for OpenStack Identity API Client
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the client library for interacting with Openstack
@@ -57,6 +57,7 @@ Identity API.
 %py_req_cleanup
 # disable intersphinx - no network access during build
 echo "intersphinx_mapping = {}" >> doc/source/conf.py
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
