Avoid running testing in parallel on oslo.messaging
Testing in parallel for oslo.messaging fails more often than not.
Upstream tox gate uses --slowest as well, so we should use the same

Change-Id: I0b06c0173a5797a1803f8837ae0cb4907c3b1049

--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -104,7 +104,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{py2_install}
 
 %check
-%{__python2} setup.py testr
+%{__python2} setup.py testr --slowest
 
 %files
 %license LICENSE
