Update python-magnumclient to 2.7.0
Change-Id: If3bae22a1e6133548bdf61e133d587d37b31e73e
Depends-on: Iec98d7128b0be6ba0eb3b92ab9771fa291df50b2

--- a/openstack/python-magnumclient/python-magnumclient.spec.j2
+++ b/openstack/python-magnumclient/python-magnumclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-magnumclient') }}
-Version:        2.6.0
+Version:        2.7.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Magnum
 License:        {{ license('Apache-2.0') }}
@@ -14,7 +14,9 @@ BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('keystoneauth1') }}
 BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('python-openstackclient') }}
 BuildRequires:  {{ py2pkg('os-client-config') }}
+BuildRequires:  {{ py2pkg('osc-lib') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
@@ -31,7 +33,9 @@ Requires:       {{ py2pkg('PrettyTable') }}
 Requires:       {{ py2pkg('cryptography') }}
 Requires:       {{ py2pkg('decorator') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
+Requires:       {{ py2pkg('python-openstackclient') }}
 Requires:       {{ py2pkg('os-client-config') }}
+Requires:       {{ py2pkg('osc-lib') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('oslo.utils') }}
@@ -49,7 +53,7 @@ Client library for Magnum built on the Magnum API. It provides a Python API
 Summary:        Documentation for OpenStack Magnum API client libary
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Client library for Magnum built on the Magnum API. It provides a Python API
@@ -59,6 +63,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{name}-%{version} -p1
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
