Update python-solumclient to 2.5.0
Change-Id: I4311539efe73981965f102ae8a0fb263224c77ae
Depends-on: I6624b17b6ccc30f0c65db03d370c11e5beba9695

--- a/openstack/python-solumclient/python-solumclient.spec.j2
+++ b/openstack/python-solumclient/python-solumclient.spec.j2
@@ -1,6 +1,6 @@
 
 Name:           {{ py2name('python-solumclient') }}
-Version:        2.4.0
+Version:        2.5.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Solum
 License:        {{ license('Apache-2.0') }}
@@ -52,7 +52,7 @@ Client library for Solum built on the Solum API. It provides a Python API
 Summary:        Documentation for OpenStack Solum API client libary
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Client library for Solum built on the Solum API. It provides a Python API
@@ -62,6 +62,7 @@ This package contains the documentation.
 %prep
 %autosetup -n %{name}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
