--- a/openstack/glance_store/glance_store.spec.j2
+++ b/openstack/glance_store/glance_store.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/g/%{sname}/%{sname}-%{version}.tar.gz
+# https://review.openstack.org/#/c/346873/
+Patch01:        disable_verification_for_keystone_session_in_swift.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('debtcollector') }}
@@ -70,7 +72,7 @@ BuildRequires:  {{ py2pkg('reno') }}
 Documentation for the Glance store library.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
 
 %build
