Karborclient is using keystoneauth for authentication
Change-Id: Ibd288224fe57b6dc3de23ca0347ca86affc3cc46

--- a/openstack/python-karborclient/python-karborclient.spec.j2
+++ b/openstack/python-karborclient/python-karborclient.spec.j2
@@ -12,7 +12,7 @@ BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('PrettyTable') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
-BuildRequires:  {{ py2pkg('python-keystoneclient') }}
+BuildRequires:  {{ py2pkg('keystoneauth1') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('osc-lib') }}
@@ -28,7 +28,7 @@ BuildRequires:  {{ py2pkg('simplejson') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PrettyTable') }}
-Requires:       {{ py2pkg('python-keystoneclient') }}
+Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('osc-lib') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.log') }}
