--- a/openstack/openstack-macros/openstack-macros.spec.j2
+++ b/openstack/openstack-macros/openstack-macros.spec.j2
@@ -12,6 +12,8 @@ Source0:        macros.openstack-common
 Source1:        macros.openstack-suse
 Source2:        macros.openstack-rdo
 Source3:        macros.openstack-fedora
+# the singlespec macros are a copy of https://github.com/openSUSE/python-rpm-macros
+Source4:        macros.openstack-singlespec
 BuildArch:      noarch
 %if 0%{?rdo}
 Obsoletes:     rdo-rpm-macros <= 1-3
@@ -30,6 +32,7 @@ packages.
 
 %install
 install -D -m644 %{SOURCE0} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-common
+install -D -m644 %{SOURCE4} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-singlespec
 %if 0%{?suse_version}
 install -D -m644 %{SOURCE1} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-suse
 %endif
@@ -42,6 +45,7 @@ install -D -m644 %{SOURCE2} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-fedo
 
 %files
 %{_sysconfdir}/rpm/macros.openstack-common
+%{_sysconfdir}/rpm/macros.openstack-singlespec
 %if 0%{?suse_version}
 %{_sysconfdir}/rpm/macros.openstack-suse
 %endif
